--- a/src/main/resources/templates/bookOverview.html
+++ b/src/main/resources/templates/bookOverview.html
@@ -10,10 +10,12 @@
     <tr>
         <th>Title</th>
         <th>Author</th>
+        <th>Add copy</th>
     </tr>
     <tr th:each="book : ${allBooks}">
         <td th:text="${book.title}"></td>
         <td th:text="${book.author}"></td>
+        <td><a th:href="@{/copy/new/{bookId}(bookId=${book.bookId})}">Buy</a></td>
     </tr>
 </table>
 </body>
