--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Create a new book</h1>
 <form th:action="@{/book/new}" method="post" th:object="${book}">
+    <input type="hidden" th:field="*{bookId}">
     <table>
         <tr>
             <th>Title</th>
