--- a/src/main/resources/templates/bookOverview.html
+++ b/src/main/resources/templates/bookOverview.html
@@ -16,6 +16,7 @@
     <tr th:each="book : ${allBooks}">
         <td th:text="${book.title}"></td>
         <td th:text="${book.author}"></td>
+        <td><a th:href="@{/book/edit/{bookId}(bookId=${book.bookId})}">Edit</a></td>
         <td th:text="${book.numberOfAvailableCopies}"></td>
         <td><a th:href="@{/copy/new/{bookId}(bookId=${book.bookId})}">Buy</a></td>
     </tr>
