--- a/src/main/resources/templates/bookOverview.html
+++ b/src/main/resources/templates/bookOverview.html
@@ -17,6 +17,7 @@
         <td th:text="${book.title}"></td>
         <td th:text="${book.author}"></td>
         <td><a th:href="@{/book/edit/{bookId}(bookId=${book.bookId})}">Edit</a></td>
+        <td><a th:href="@{/book/delete/{bookId}(bookId=${book.bookId})}">Delete</a></td>
         <td th:text="${book.numberOfAvailableCopies}"></td>
         <td><a th:href="@{/copy/new/{bookId}(bookId=${book.bookId})}">Buy</a></td>
     </tr>
