added Author Entity

--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -14,11 +14,20 @@
             <th>Author</th>
         </tr>
         <tr>
-            <td><input type="text" th:field="*{title}" /></td>
-            <td><input type="text" th:field="*{author}" /></td>
+            <td><input type="text" th:field="*{title}"/></td>
+            <td>
+                <select th:field="*{authors}" multiple>
+                    <option th:each="author : ${allAuthors}"
+                            th:value="${author.authorId}"
+                            th:text="${author.displayName}"
+                    >
+
+                    </option>
+                </select>
+            </td>
         </tr>
     </table>
-    <input type="submit" value="Save book" />
+    <input type="submit" value="Save book"/>
 </form>
 </body>
 </html>
