--- a/src/main/resources/templates/bookDetails.html
+++ b/src/main/resources/templates/bookDetails.html
@@ -5,36 +5,40 @@
     <title th:text="${bookToShowDetailsFor.title}"></title>
 </head>
 <body>
-  <h1>Details of the book: <span th:text="${bookToShowDetailsFor.title}"></span></h1>
+<h1>Details of the book: <span th:text="${bookToShowDetailsFor.title}"></span></h1>
 <table>
-  <tr>
-    <td>Title</td>
-    <td th:text="${bookToShowDetailsFor.title}"></td>
-  </tr>
-  <tr>
-    <td>Author</td>
-    <td th:text="${bookToShowDetailsFor.author}"></td>
-  </tr>
-  <tr>
-    <td>Number of available copies</td>
-    <td th:text="${bookToShowDetailsFor.numberOfAvailableCopies}"></td>
-  </tr>
+    <tr>
+        <td>Title</td>
+        <td th:text="${bookToShowDetailsFor.title}"></td>
+    </tr>
+    <tr>
+        <td>Authors</td>
+        <td></td>
+    </tr>
+    <tr th:each="author : ${bookToShowDetailsFor.authors}">
+        <td></td>
+        <td th:text="${author.displayName}"></td>
+    </tr>
+    <tr>
+        <td>Number of available copies</td>
+        <td th:text="${bookToShowDetailsFor.numberOfAvailableCopies}"></td>
+    </tr>
 </table>
-  <a th:href="@{/book/all}">Back to overview</a>
+<a th:href="@{/book/all}">Back to overview</a>
 <table>
-  <tr>
-    <th>copyId</th>
-    <th>Availability Status</th>
-  </tr>
-  <tr th:each="copy : ${bookToShowDetailsFor.copies}">
-    <td th:text="${copy.copyId}"></td>
-    <td th:if="${copy.available}">
-      <a th:href="@{/copy/borrow/{copyId}(copyId=${copy.copyId})}">Borrow</a>
-    </td>
-    <td th:unless="${copy.available}">
-      <a th:href="@{/copy/return/{copyId}(copyId=${copy.copyId})}">return</a>
-    </td>
-  </tr>
+    <tr>
+        <th>copyId</th>
+        <th>Availability Status</th>
+    </tr>
+    <tr th:each="copy : ${bookToShowDetailsFor.copies}">
+        <td th:text="${copy.copyId}"></td>
+        <td th:if="${copy.available}">
+            <a th:href="@{/copy/borrow/{copyId}(copyId=${copy.copyId})}">Borrow</a>
+        </td>
+        <td th:unless="${copy.available}">
+            <a th:href="@{/copy/return/{copyId}(copyId=${copy.copyId})}">return</a>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
