--- a/src/main/resources/templates/authorOverview.html
+++ b/src/main/resources/templates/authorOverview.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
+<head th:replace="fragments/general :: baseHeader(~{:: title})">
+    <title>Put a title here</title>
+</head>
+<body>
+
+<div th:replace="fragments/general :: navbar"></div>
+
+<div class="container">
+    <h1>Overview of all authors</h1>
+    <table>
+        <tr>
+            <th>First name</th>
+            <th>Infix name</th>
+            <th>Last name</th>
+            <th></th>
+        </tr>
+        <tr th:each="author : ${allAuthors}">
+            <td th:text="${author.firstName}"></td>
+            <td th:text="${author.infixName}"></td>
+            <td th:text="${author.lastName}"></td>
+            <td></td>
+        </tr>
+        <form th:action="@{/author/new}" method="post" th:object="${newAuthor}">
+            <tr>
+                <td><input type="text" th:field="*{firstName}"/></td>
+                <td><input type="text" th:field="*{infixName}"/></td>
+                <td><input type="text" th:field="*{lastName}"/></td>
+                <td><input type="submit" value="Save Author"/></td>
+            </tr>
+        </form>
+    </table>
+</div>
+
+<div th:replace="fragments/general :: footer"></div>
+<div th:replace="fragments/general :: bottomScripts"></div>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Author Overview</title>
 </head>
 <body>
-<h1>Overview of all authors</h1>
-<table>
-    <tr>
-        <th>First name</th>
-        <th>Infix name</th>
-        <th>Last name</th>
-        <th></th>
-    </tr>
-    <tr th:each="author : ${allAuthors}">
-        <td th:text="${author.firstName}"></td>
-        <td th:text="${author.infixName}"></td>
-        <td th:text="${author.lastName}"></td>
-        <td></td>
-    </tr>
-    <form th:action="@{/author/new}" method="post" th:object="${newAuthor}">
-        <tr>
-            <td><input type="text" th:field="*{firstName}"/></td>
-            <td><input type="text" th:field="*{infixName}"/></td>
-            <td><input type="text" th:field="*{lastName}"/></td>
-            <td><input type="submit" value="Save Author"/></td>
-        </tr>
-    </form>
-</table>
-
 
 </body>
 </html>
