--- a/src/main/resources/templates/bookDetails.html
+++ b/src/main/resources/templates/bookDetails.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="${bookToShowDetailsFor.title}"></title>
+<head th:replace="fragments/general :: baseHeader(~{:: title})">
+    <title>Put a title here</title>
 </head>
 <body>
-<h1>Details of the book: <span th:text="${bookToShowDetailsFor.title}"></span></h1>
-<table>
-    <tr>
-        <td>Title</td>
-        <td th:text="${bookToShowDetailsFor.title}"></td>
-    </tr>
-    <tr>
-        <td>Authors</td>
-        <td></td>
-    </tr>
-    <tr th:each="author : ${bookToShowDetailsFor.authors}">
-        <td></td>
-        <td th:text="${author.displayName}"></td>
-    </tr>
-    <tr>
-        <td>Number of available copies</td>
-        <td th:text="${bookToShowDetailsFor.numberOfAvailableCopies}"></td>
-    </tr>
-</table>
-<a th:href="@{/book/all}">Back to overview</a>
-<table>
-    <tr>
-        <th>copyId</th>
-        <th>Availability Status</th>
-    </tr>
-    <tr th:each="copy : ${bookToShowDetailsFor.copies}">
-        <td th:text="${copy.copyId}"></td>
-        <td th:if="${copy.available}">
-            <a th:href="@{/copy/borrow/{copyId}(copyId=${copy.copyId})}">Borrow</a>
-        </td>
-        <td th:unless="${copy.available}">
-            <a th:href="@{/copy/return/{copyId}(copyId=${copy.copyId})}">return</a>
-        </td>
-    </tr>
-</table>
+
+<div th:replace="fragments/general :: navbar"></div>
+
+<div class="container">
+
+    <h1>Details of the book: <span th:text="${bookToShowDetailsFor.title}"></span></h1>
+    <table>
+        <tr>
+            <td>Title</td>
+            <td th:text="${bookToShowDetailsFor.title}"></td>
+        </tr>
+        <tr>
+            <td>Authors</td>
+            <td></td>
+        </tr>
+        <tr th:each="author : ${bookToShowDetailsFor.authors}">
+            <td></td>
+            <td th:text="${author.displayName}"></td>
+        </tr>
+        <tr>
+            <td>Number of available copies</td>
+            <td th:text="${bookToShowDetailsFor.numberOfAvailableCopies}"></td>
+        </tr>
+    </table>
+    <a th:href="@{/book/all}">Back to overview</a>
+    <table>
+        <tr>
+            <th>copyId</th>
+            <th>Availability Status</th>
+        </tr>
+        <tr th:each="copy : ${bookToShowDetailsFor.copies}">
+            <td th:text="${copy.copyId}"></td>
+            <td th:if="${copy.available}">
+                <a th:href="@{/copy/borrow/{copyId}(copyId=${copy.copyId})}">Borrow</a>
+            </td>
+            <td th:unless="${copy.available}">
+                <a th:href="@{/copy/return/{copyId}(copyId=${copy.copyId})}">return</a>
+            </td>
+        </tr>
+    </table>
+
+</div>
+
+<div th:replace="fragments/general :: footer"></div>
+<div th:replace="fragments/general :: bottomScripts"></div>
+
 </body>
 </html>
