--- a/src/main/resources/templates/bookOverview.html
+++ b/src/main/resources/templates/bookOverview.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Book Overview</title>
+<head th:replace="fragments/general :: baseHeader(~{:: title})">
+    <title>Put a title here</title>
 </head>
 <body>
-<h1>Overview of all books</h1>
-<a href="/book/new">Add new book</a>
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Availability</th>
-        <th>Add copy</th>
-    </tr>
-    <tr th:each="book : ${allBooks}">
-        <td><a th:href="@{/book/details/{title}(title=${book.title})}" th:text="${book.title}"></a></td>
-        <td th:text="${book.allAuthorsDisplayNames}"></td>
-        <td><a th:href="@{/book/edit/{bookId}(bookId=${book.bookId})}">Edit</a></td>
-        <td><a th:href="@{/book/delete/{bookId}(bookId=${book.bookId})}">Delete</a></td>
-        <td th:text="${book.numberOfAvailableCopies}"></td>
-        <td><a th:href="@{/copy/new/{bookId}(bookId=${book.bookId})}">Buy</a></td>
-    </tr>
-</table>
+
+<div th:replace="fragments/general :: navbar"></div>
+
+<div class="container">
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Availability</th>
+            <th>Add copy</th>
+        </tr>
+        <tr th:each="book : ${allBooks}">
+            <td><a th:href="@{/book/details/{title}(title=${book.title})}" th:text="${book.title}"></a></td>
+            <td th:text="${book.allAuthorsDisplayNames}"></td>
+            <td><a th:href="@{/book/edit/{bookId}(bookId=${book.bookId})}">Edit</a></td>
+            <td><a th:href="@{/book/delete/{bookId}(bookId=${book.bookId})}">Delete</a></td>
+            <td th:text="${book.numberOfAvailableCopies}"></td>
+            <td><a th:href="@{/copy/new/{bookId}(bookId=${book.bookId})}">Buy</a></td>
+        </tr>
+    </table>
+</div>
+
+<div th:replace="fragments/general :: footer"></div>
+<div th:replace="fragments/general :: bottomScripts"></div>
+
 </body>
 </html>
